@@ -39,6 +39,7 @@ dillo-fltk2
  - Reimplemented plain.cc using a class, and hooked memory-release.
  - Reimplemented html.cc using a class, removed the linkblock,
    and hooked memory-release to dw destruction.
+ - Switched UI shortcuts from a global event handler to UI::handle.
    Patches: Jorge Arellano
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color and geometry in preferences.
